[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/gamestates/menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/input_remap_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/graphics/wildcards.png" type="Texture" id=4]
[ext_resource path="res://assets/music/Track 1.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/ui/ui_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/graphics/spacewards menu background.jpg" type="Texture" id=7]
[ext_resource path="res://scenes/ui/audio_slider.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "to_settings"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 960, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "to_wildcards"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -960, 0 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/to_settings = SubResource( 1 )
anims/to_wildcards = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -960.0
margin_right = 960.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerWildcards" type="Control" parent="HBoxContainer"]
margin_right = 960.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/ContainerWildcards"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ContainerWildcards"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ContainerWildcards/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 930.0
margin_bottom = 570.0
rect_pivot_offset = Vector2( -946.505, -100 )
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ContainerWildcards/MarginContainer/VBoxContainer"]
margin_right = 900.0
margin_bottom = 396.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="HBoxLabels" type="HBoxContainer" parent="HBoxContainer/ContainerWildcards/MarginContainer/VBoxContainer"]
margin_top = 416.0
margin_right = 900.0
margin_bottom = 459.0
alignment = 1

[node name="LabelCarrots" type="Label" parent="HBoxContainer/ContainerWildcards/MarginContainer/VBoxContainer/HBoxLabels"]
margin_left = 18.0
margin_right = 448.0
margin_bottom = 43.0
rect_min_size = Vector2( 430, 0 )
text = "Collect a frozen carrot to replenish
one jetpack boost!"
align = 1

[node name="LabelTime" type="Label" parent="HBoxContainer/ContainerWildcards/MarginContainer/VBoxContainer/HBoxLabels"]
margin_left = 452.0
margin_right = 882.0
margin_bottom = 43.0
rect_min_size = Vector2( 430, 0 )
text = "Watch the background, you'll see the sun
 mirror the hour hand of your local clock."
align = 1

[node name="HBoxButton" type="HBoxContainer" parent="HBoxContainer/ContainerWildcards/MarginContainer/VBoxContainer"]
margin_top = 479.0
margin_right = 900.0
margin_bottom = 540.0
size_flags_vertical = 3
alignment = 2

[node name="ButtonBack" type="Button" parent="HBoxContainer/ContainerWildcards/MarginContainer/VBoxContainer/HBoxButton"]
margin_left = 820.0
margin_top = 21.0
margin_right = 900.0
margin_bottom = 61.0
rect_min_size = Vector2( 80, 40 )
size_flags_horizontal = 0
size_flags_vertical = 8
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerMain" type="Control" parent="HBoxContainer"]
margin_left = 960.0
margin_right = 1920.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundLogo" type="TextureRect" parent="HBoxContainer/ContainerMain"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ContainerMain"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ContainerMain/MarginContainer"]
margin_left = 100.0
margin_top = 368.0
margin_right = 860.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ContainerMain/MarginContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 132.0
rect_min_size = Vector2( 150, 130 )
size_flags_vertical = 0

[node name="ButtonPlay" type="Button" parent="HBoxContainer/ContainerMain/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "PLAY"

[node name="ButtonSettings" type="Button" parent="HBoxContainer/ContainerMain/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 150.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SETTINGS"

[node name="ButtonWildcards" type="Button" parent="HBoxContainer/ContainerMain/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 150.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "WILDCARD INFO"

[node name="ButtonExit" type="Button" parent="HBoxContainer/ContainerMain/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 150.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "EXIT"

[node name="ContainerSettings" type="Control" parent="HBoxContainer"]
margin_left = 1920.0
margin_right = 2880.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/ContainerSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ContainerSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ContainerSettings/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 910.0
margin_bottom = 550.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer"]
margin_right = 860.0
margin_bottom = 20.0
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 860.0
margin_bottom = 440.0
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridSettings" type="GridContainer" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 420.0
margin_bottom = 400.0
size_flags_horizontal = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 5
columns = 2

[node name="LabelMaster" type="Label" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridSettings"]
margin_right = 150.0
margin_bottom = 20.0
text = "Master volume: "

[node name="AudioSliderMaster" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridSettings" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 155.0
margin_right = 420.0
margin_bottom = 16.0
size_flags_horizontal = 3
bus_name = "Master"

[node name="LabelMusic" type="Label" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridSettings"]
margin_top = 30.0
margin_right = 150.0
margin_bottom = 50.0
text = "Music volume: "

[node name="AudioSliderMusic" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridSettings" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 155.0
margin_top = 30.0
margin_right = 420.0
margin_bottom = 46.0
size_flags_horizontal = 3
bus_name = "Music"

[node name="LabelSound" type="Label" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridSettings"]
margin_top = 60.0
margin_right = 150.0
margin_bottom = 80.0
text = "Sound volume: "

[node name="AudioSliderSound" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridSettings" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 155.0
margin_top = 60.0
margin_right = 420.0
margin_bottom = 76.0
size_flags_horizontal = 3
bus_name = "Sound"

[node name="GridControls" type="GridContainer" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 440.0
margin_right = 860.0
margin_bottom = 400.0
size_flags_horizontal = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="LabelJump" type="Label" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridControls"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 25.0
text = "Jump:"

[node name="ButtonJump" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridControls" instance=ExtResource( 3 )]
margin_left = 70.0
margin_right = 420.0
margin_bottom = 30.0
size_flags_horizontal = 3
action = "ui_up"

[node name="LabelLeft" type="Label" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridControls"]
margin_top = 45.0
margin_right = 60.0
margin_bottom = 65.0
text = "Left:"

[node name="ButtonLeft" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridControls" instance=ExtResource( 3 )]
margin_left = 70.0
margin_top = 40.0
margin_right = 420.0
margin_bottom = 70.0
size_flags_horizontal = 3
action = "ui_left"

[node name="LabelRight" type="Label" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridControls"]
margin_top = 85.0
margin_right = 60.0
margin_bottom = 105.0
text = "Right:"

[node name="ButtonRight" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridControls" instance=ExtResource( 3 )]
margin_left = 70.0
margin_top = 80.0
margin_right = 420.0
margin_bottom = 110.0
size_flags_horizontal = 3
action = "ui_right"

[node name="LabelBoost" type="Label" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridControls"]
margin_top = 125.0
margin_right = 60.0
margin_bottom = 145.0
text = "Boost:"

[node name="ButtonBoost" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridControls" instance=ExtResource( 3 )]
margin_left = 70.0
margin_top = 120.0
margin_right = 420.0
margin_bottom = 150.0
size_flags_horizontal = 3
action = "ui_select"

[node name="LabelPause" type="Label" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridControls"]
margin_top = 165.0
margin_right = 60.0
margin_bottom = 185.0
text = "Pause:"

[node name="ButtonPause" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/HBoxContainer/GridControls" instance=ExtResource( 3 )]
margin_left = 70.0
margin_top = 160.0
margin_right = 420.0
margin_bottom = 190.0
size_flags_horizontal = 3
action = "pause"

[node name="ButtonBack" type="Button" parent="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer"]
margin_top = 460.0
margin_right = 80.0
margin_bottom = 500.0
rect_min_size = Vector2( 80, 40 )
size_flags_horizontal = 0
text = "BACK"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="HBoxContainer/ContainerWildcards/MarginContainer/VBoxContainer/HBoxButton/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="HBoxContainer/ContainerMain/MarginContainer/HBoxContainer/VBoxContainer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="HBoxContainer/ContainerMain/MarginContainer/HBoxContainer/VBoxContainer/ButtonSettings" to="." method="_on_ButtonSettings_pressed"]
[connection signal="pressed" from="HBoxContainer/ContainerMain/MarginContainer/HBoxContainer/VBoxContainer/ButtonWildcards" to="." method="_on_ButtonWildcards_pressed"]
[connection signal="pressed" from="HBoxContainer/ContainerMain/MarginContainer/HBoxContainer/VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="pressed" from="HBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
